# fy-4b-tools

./: .env.example  .gitignore  Dockerfile  README.md  add_boundaries.py  adjust_padding.py  cleanup_noon_only.py  create_geotiff.py  create_tiles.py  crop_padding.py  docker-compose.yml  download_stitch.py  georeference_and_reproject.py  main.py  main_workflow.py  pyproject.toml  requirements.txt
ai/: 1.md  1.prompt.md
